# jason.json

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  sample.env
https-redirect/: Cargo.toml
https-redirect/src/: main.rs
src/: main.rs
static/: scale.js  style.css
static/data/: sample.json
templates/: template.html.tera
web/: Cargo.toml  Rocket.toml
web/src/: main.rs
web/static/: obfuscation.js  style.css
web/static/data/: sample.json
web/templates/: template.html.tera
