[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["tls", "json"] }
dotenvy = "0.15.7"
serde = "1.0.159"
serde_json = "1.0.95"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
base64 = "0.13.0"
